pi/ttyd-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-ttyd
  labels:
    app: pi-ttyd
spec:
  selector:
    app: pi-ttyd
  ports:
    - name: http
      port: 7681
      targetPort: 7681
      protocol: TCP
