pi/ttyd-deployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pi-ttyd
  labels:
    app: pi-ttyd
spec:
  to:
    kind: Service
    name: pi-ttyd
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
